Update UI & addBookToLibrary logic

--- a/index.html
+++ b/index.html
@@ -1,74 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-</head>
-<body>
-  <header id="main-header">
-    <h2 class="header-title">Book Library</h2>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Library</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+  </head>
+  <body>
+    <div id="main-header" class="jumbotron text-center">
+      <h2 class="header-title">The Book Library</h2>
+    </div>
+    <div class="container">
+      <p class="message"></p>
+      <button id="add-book" class="btn btn-info">Add New Book</button>
+      <div class="add-book-form mt-3">
+        <form id="book-details-form">
+          <div class="form-group">
+            <input type="text" id="book-title" placeholder="add book title" />
+          </div>
+          <div class="form-group">
+            <input type="text" id="book-author" placeholder="add book author" />
+          </div>
+          <div class="form-group">
+            <input type="number" id="book-pages" placeholder="number of pages" />
+          </div>
+          <select id="read-book">
+            <option>Have you read the book</option>
+            <option value="yes">Yes</option>
+            <option value="no">NO</option>
+          </select>
 
-  <div class="container">
-    <div class="add-book">
-      <form id="book-details-form">
-        <div class="form-group">
-          <input type="text" id="book-title" placeholder="add book title"/>
-        </div>
-        <div class="form-group">
-          <input type="text" id="book-author" placeholder="add book author"/>
-        </div>
-        <div class="form-group">
-          <input type="number" id="book-pages" />
-        </div>
-        <select id="read-book">
-          <option>Have you read the book</option>
-          <option value="yes">Yes</option>
-          <option value="no">NO</option>
-        </select>
-
-        <div class="form-action">
-          <button type="submit" class="btn btn-success">Add the Book</button>
-        </div>
-      </form>
-
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+          <div class="form-action mt-3">
+            <button type="submit" class="btn btn-success" id="submit-book">Add the Book</button>
+          </div>
+        </form>
       </div>
     </div>
-  </div>
-</div>
-    </div>
-  </div>
-  <script src="scripts/main.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/bootstrap.bundle.js"></script>
-  <script src="scripts/bootstrap.bundle.min.js"></script>
-  <script src="scripts/bootstrap.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-
+    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/bootstrap.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </body>
 </html>
