--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       <div class="add-book-form mt-3">
         <form id="book-details-form">
           <div class="form-group">
-            <input type="text" id="book-title" placeholder="add book title" />
+            <input type="text" id="book-title" placeholder="add book title" required/>
           </div>
           <div class="form-group">
-            <input type="text" id="book-author" placeholder="add book author" />
+            <input type="text" id="book-author" placeholder="add book author" required/>
           </div>
           <div class="form-group">
-            <input type="number" id="book-pages" placeholder="number of pages" />
+            <input type="number" id="book-pages" placeholder="number of pages" required/>
           </div>
-          <select id="read-book">
-            <option>Have you read the book</option>
-            <option value="yes">Yes</option>
-            <option value="no">NO</option>
-          </select>
+          <div class="form-group">
+            <input type="checkbox" id="read-book">
+            <p>Check the box if you have read the book.</p> 
+          </div>
+          
 
           <div class="form-action mt-3">
             <button type="submit" class="btn btn-success" id="submit-book">Add the Book</button>
