Update the displayBoo() & addBookToLibrary() functions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2 class="header-title">The Book Library</h2>
     </div>
     <div class="container">
-      <p class="message"></p>
+      <div id="books" class="row"></div>
       <button id="add-book" class="btn btn-info">Add New Book</button>
       <div class="add-book-form mt-3">
         <form id="book-details-form">
