Implement delete button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div id="main-header" class="jumbotron text-center">
       <h2 class="header-title">The Book Library</h2>
     </div>
-    <div class="container">
-      <div id="books" class="row"></div>
+    <div class="container">     
       <button id="add-book" class="btn btn-info">Add New Book</button>
       <div class="add-book-form mt-3">
         <form id="book-details-form">
@@ -37,11 +36,9 @@
           </div>
         </form>
       </div>
+       <div id="books" class="row mt-5"></div>
     </div>
     <script src="scripts/main.js"></script>
-    <!-- <script src="scripts/bootstrap.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- <script src="scripts/bootstrap.min.js"></script> -->    
   </body>
 </html>
