Update displayBook & showBooks functions to add more info about a book & implement the IIFE paradigm

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
           </div>
         </form>
       </div>
-       <div id="books" class="row mt-5"></div>
+       <div id="books" class="row mt-5 text-start">
+         <div class="col-12 text-center">
+           <h2 class="title">Books Information</h2>
+         </div>
+       </div>
     </div>
     <script src="scripts/main.js"></script>
     <!-- <script src="scripts/bootstrap.min.js"></script> -->    
