--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
        </div>
     </div>
     <script src="scripts/main.js"></script>
-    <!-- <script src="scripts/bootstrap.min.js"></script> -->    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
   </body>
 </html>
